@@ -21,6 +21,7 @@ too low when in fact it's the minimum.
 * Fixed 'czero' servers in the live server view to show maps correctly.
 * Fixed 'white screen' problems on certain pages when run on PHP5.
 * Corrected 'kill_streak' and 'death_streak' calculation in awards.
+* Fixed team detection for players w/o the need for 'joined_team' events.
 
 Version 3.0.4 beta (2007-02-10)
 + Added clean module detection to stats.pl to show 'pretty' errors
